WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102167
REGRESSION(
r134328
) - ASSERT(isMainThread()) when subresources redirect in the NetworkProcessPass through
https://bugs.webkit.org/show_bug.cgi?id=102167
Summary
REGRESSION(r134328) - ASSERT(isMainThread()) when subresources redirect in th...
Brady Eidson
Reported
2012-11-13 19:29:21 PST
Regressed in
http://trac.webkit.org/changeset/134328
Attachments
Patch v1
(1.78 KB, patch)
2012-11-13 19:31 PST
,
Brady Eidson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2012-11-13 19:29:37 PST
REGRESSION(
r134328
) - ASSERT(isMainThread()) when subresources redirect in the NetworkProcessPass through
Brady Eidson
Comment 2
2012-11-13 19:31:39 PST
Created
attachment 174053
[details]
Patch v1
Brady Eidson
Comment 3
2012-11-13 19:38:57 PST
http://trac.webkit.org/changeset/134522
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug