REGRESSION(r134328) - ASSERT(isMainThread()) when subresources redirect in the NetworkProcessPass through https://bugs.webkit.org/show_bug.cgi?id=102167

Reviewed by Simon Fraser.

willSendRequest comes in on a background thread but we need to do HostRecord accounting on the main thread.

So we'll just dispatch the receivedRedirect call to the main thread RunLoop.

* NetworkProcess/NetworkResourceLoader.cpp:
(WebKit::NetworkResourceLoader::willSendRequest):

Canonical link: https://commits.webkit.org/120247@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134522 268f45cc-cd09-0410-ab3c-d52691b4dbfc